<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>br.com.pensaosalvatore</groupId>
    <artifactId>SISTEMA_HOTELARIADesktop</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <exec.mainClass>br.com.pensaosalvatore.sistema_hotelaria.desktop.view.autenticacao.AutenticacaoView</exec.mainClass>
    </properties>

    <dependencies>
        <!-- Dependência do módulo de modelo -->
        <dependency>
            <groupId>br.com.pensaosalvatore</groupId>
            <artifactId>SISTEMA_HOTELARIAModelo</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <!-- Layout Absoluto do NetBeans -->
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE260</version>
        </dependency>

            
        <!-- MySQL Connector -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.1.0</version>
        </dependency>
    </dependencies>
    
    

    <build>
        <plugins>
            <!-- Plugin de compilação -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Plugin para executar aplicação Java -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <mainClass>br.com.pensaosalvatore.sistema_hotelaria.desktop.view.autenticacao.AutenticacaoView</mainClass>
                    <commandlineArgs></commandlineArgs>
                    <arguments>
                        <argument>--enable-preview</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>